--- a/web/templates/contatti.html
+++ b/web/templates/contatti.html
@@ -5,7 +5,7 @@
         <head>
             <h1>Owner</h1>
             <p>Fabio Volpe<br>Marco Volpe</p>
-            <p>Email - example@lazynews.mv</p><br>
+            <p>Email - @lazynews.mv</p><br>
         </head>
         <body>
             <p>Contenuti</p>
