--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-    <html lang="it">
-    <meta charset="UTF-8">
-        <style>
-            h1 {
-            font-size:100px;
-            text-align:center;
-            }
-        </style>
-        <head>
-            <title>{{ title }}</title>
-            <h1>{{ title }}</h1>
-            <p>Notizie principali</p>
-        </head>
-        <body>
-            <p>Contenuti</p>
-            <a href="/contatti">Contatti</a><br>
-            <a href="/eventi">Eventi</a>
-        </body>
-    </html>
+{% extends 'base.html' %}
+
+{% block header %}
+    <h1>{% block title %}Home{% endblock %}</h1>
+{% endblock %}
+
+{% block content%}
+    <h3>Notizie del giorno</h3>
+{% endblock %}
