--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -5,13 +5,19 @@
 {% endblock %}
 
 {% block content %}
+<br>
     <form method="post">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" required>
+        <br>
+        <br>
         <label for="username">Username</label>
         <input name="username" id="username" required>
-
+        <br>
+        <br>
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" required></input>
-
-        <input tyep="submit" value="Crea account">
+        <input type="password" name="password" id="password" required>
+        <br>
+        <button type="submit" value="Crea account">Crea account</button>
     </form>
 {% endblock %}
