--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<br>
     <form method="post">
         <label for="username">Username</label>
         <input name="username" id="username" required>
@@ -12,6 +13,6 @@
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required></input>
 
-        <input tyep="submit" value="Crea account">
+        <button type="submit" value="Crea account">Crea account</button>
     </form>
 {% endblock %}
