--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -6,4 +6,10 @@
 
 {% block content%}
     <h3>Notizie del giorno</h3>
+    <aside class="sidebar">
+        <h3>Sidebar</h3>
+        <ul>
+            <li>test</li>
+        </ul>
+    </aside>
 {% endblock %}
