--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -5,11 +5,8 @@
 {% endblock %}
 
 {% block content%}
-    <h3>Notizie del giorno</h3>
-    <aside class="sidebar">
-        <h3>Sidebar</h3>
-        <ul>
-            <li>test</li>
-        </ul>
+    <aside style="position: fixed; left: 0; top 0; width: 200px; height: 100%; background: #ddd; padding: 20px; text-align: center;">
+        <p>Orario</p>
+        <p>{{ time }}</p>
     </aside>
 {% endblock %}
