--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -5,13 +5,17 @@
 {% endblock %}
 
 {% block content %}
-    <form method="POST">
+    <form class="center" method="POST">
+        <br>
+        <br>
         <label for="username">Username</label>
         <input name="username" id="username" required>
-
+        <br>
+        <br>
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required>
-
+        <br>
+        <br>
         <input type="submit" value="Entra">
     </form>
 {% endblock %}
