--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <br>
-    <form method="post">
+    <form class="center" method="post">
         <label for="email">Email</label>
         <input type="email" name="email" id="email" required>
         <br>
@@ -17,6 +17,7 @@
         <br>
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required>
+        <br>
         <br>
         <button type="submit" value="Crea account">Crea account</button>
     </form>
