--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content%}
-    <aside style="position: fixed; left: 0; top 0; width: 200px; height: 100%; background: #ddd; padding: 20px; text-align: center;">
-        <p>Orario</p>
-        <p>{{ time }}</p>
+    <aside class="aside">
+        <p><strong>Orario</strong></p>
+        <p><strong>{{ time }}</strong></p>
     </aside>
 {% endblock %}
