--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -9,13 +9,15 @@
         <br>
         <br>
         <label for="username">Username</label>
+        <br>
         <input name="username" id="username" required>
         <br>
         <br>
         <label for="password">Password</label>
+        <br>
         <input type="password" name="password" id="password" required>
         <br>
         <br>
-        <input type="submit" value="Entra">
+        <input type="submit" value="Entra" class="button">
     </form>
 {% endblock %}
