--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -7,16 +7,21 @@
 {% block content %}
 <br>
     <form class="center" method="post">
+        <br>
+        <br>
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" required>
+        <br>
+        <input type="email" name="email" id="email" placeholder="lazyNews@example.org" required>
         <br>
         <br>
         <label for="username">Username</label>
-        <input name="username" id="username" required>
+        <br>
+        <input name="username" id="username" placeholder="LazyBrods99" required>
         <br>
         <br>
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
+        <br>
+        <input type="password" name="password" id="password" placeholder="---" required>
         <br>
         <br>
         <button type="submit" value="Crea account">Crea account</button>
