--- a/web/static/style.css
+++ b/web/static/style.css
@@ -11,11 +11,12 @@ header {
     color: white;
     padding: 1rem;
     text-align: center;
+    transition: 0.3s;
 }
 
 a {
     color: #007bff;
-    text-decoratin; none;
+    text-decoration: none;
 }
 
 a:hover {
@@ -28,11 +29,97 @@ p {
 
 .sidebar {
     flex: 1;
-    background-color: #ddd;
+    background-color: #f4f4f4;
     padding: 20px;
     border-radius: 10px;
 }
 
-.center {
+button {
+    background-color: #007bff;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    width: 150px;
+    height: 50px;
+    transition: 0.3s;
+    font-weight: bold;
+}
+
+button:hover {
+    transform: scale(1.1);
+    transform: opacity(50%);
+}
+
+label {
+    font-weight: bold;
+
+}
+
+.aside {
+    position: fixed;
+    flex: 1;
+    left: 0; top 0;
+    width: 200px;
+    height: 100%;
+    background: #e9e9e9;
+    padding: 20px;
     text-align: center;
+    transition: 0.3s;
+}
+
+.aside:hover {
+    background: #f9f9f9;
+}
+
+.center {
+    font-family: 'Helvetica', sans-serif;
+    text-align: center;
+    padding: 10px;
+}
+
+input {
+    text-align: center;
+    font-weight: bold;
+    width: 200px;
+    height: 20px;
+}
+
+.grid-container {
+    display: grid;
+    gird-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.image-events {
+    height: 500px;
+    width: 500px;
+    border-radius: 50%;
+    transform: scale(1);
+    transition: 0.5s;
+    display: block;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.image-events:hover {
+    transform: scale(1.1);
+    border-radius: 20%;
+    height: 800px;
+    width: 1000px;
+}
+
+.button {
+    background-color: #007bff;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    width: 150px;
+    height: 50px;
+    transition: 0.3s;
+}
+
+.button:hover {
+    transform: scale(1.1);
+    transform: opacity(50%);
 }
