add style and more jinja script

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -12,6 +12,6 @@
         {% endfor %}
     </ul>
 <p>due fratelli troppo pigri per leggere le notizie...<br>
-    Quindi ce le facciamo rIAssumere</p>
+    Quindi ce le facciamo r<strong>IA</strong>ssumere</p>
 
 {% endblock %}
