--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -38,4 +38,8 @@
         {% block content %}{% endblock %}
     </section>
 </body>
+<br>
+<footer>
+    <a href="https://github.com/Marcovo93" title="Githubb"><img src="/static/img/git.jpg" class="img_footer"></a>
+</footer>
 </html>
