--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h1>{% block title %}Home{% endblock %}</h1>
+    <h1>{% block title %}Notizie dal mondo{% endblock %}</h1>
 {% endblock %}
 
 {% block content%}
-    <aside class="aside">
-        <p><strong>Orario</strong></p>
-        <p><strong>{{ time }}</strong></p>
-    </aside>
+
 {% endblock %}
