--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -11,12 +11,7 @@
                 <p style="text-align: center">Email - <strong>{{ o.email }}</strong></p>
             {% endfor %}
             <br>
-            <h4>Email - {{ reference }}</h4><br>
+            <h4 style="text-align: center;">Email - {{ reference }}</h4><br>
         </head>
-        <body>
-            <p>Contenuti</p>
-            <a href="/">Home</a><br>
-            <a href="/eventi">Eventi</a><br>
-        </body>
     </html>
 {% endblock %}
