--- a/web/templates/notizie_dynamic.html
+++ b/web/templates/notizie_dynamic.html
@@ -1,14 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ eventi.settore }} - {{ eventi.campo }}{% endblock %}
+{% block title %}Home{% endblock %}
 
-{% block header %}<h1>{{ eventi.settore }}</h1>{% endblock %}
+{% block header %}<h1>News</h1>{% endblock %}
 
 {% block content %}
 
-    <div style="text-align: center;">
-        <h1>{{ cronaca.titolo }}</h1>
-        <p>{{ cronaca.corpo }}</p>
-    </div>
 {% endblock %}
 
